new sleep timeout value

--- a/config/eyelash_corne.conf
+++ b/config/eyelash_corne.conf
@@ -30,3 +30,18 @@ CONFIG_ZMK_BACKLIGHT_BRT_START=100
 
 # Uncomment the following line to increase the keyboard's wireless range
 #CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Idle timeout options
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_SLEEP=no
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=4140000
+CONFIG_ZMK_PM_SOFT_OFF=no
+
+# Display config (not tested yet)
+#config_zmk_display=y
+#CONFIG_ZMK_DISPLAY_INVERT=n
+#CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+#CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+#CONFIG_ZMK_WIDGET_WPM_STATUS=n
